# ComfyUI-EasyColorCorrector

./: .gitignore  AI_DETECTION_IMPROVEMENTS.md  README.md  __init__.py  project_goals.md  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: Easy Color Corrector.json
js/: comfyui-easycolorcorrection.js  histogram_widget_examples.js
src/: __init__.py
src/nodes/: __init__.py  vae_color_corrector.py
src/utils/: __init__.py  color_functions.py  device_utils.py  image_analysis.py  imports.py
