# pyproject.tom
[project]
name = "ComfyUI-EasyColorCorrector"
description = "ComfyUI custom node for flexible and efficient image color correction and post-processing."
version = "1.2.4"

license = {text = "MIT"}
dependencies  = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "colour-science>=0.4.3",
    "scipy>=1.11.0",
    "rawpy>=0.18.0",
    "imageio>=2.28.0",
    "OpenEXR>=1.3.9"
]
[project.urls]
Repository = "https://github.com/regiellis/ComfyUI-EasyColorCorrector"

[tool.comfy]
PublisherId = "itsjustregi"
DisplayName = "Easy Color Corrector"
Icon = ""
